--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.0",
+    "@webibee/react-marquee": "^0.0.6",
     "antd": "^5.24.0",
     "aos": "^2.3.4",
     "lucide-react": "^0.474.0",
@@ -17,6 +18,8 @@
     "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
+    "react-simple-marquee": "^1.3.2",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
